# districkt-summer-practice-2024

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
parser/: __main__.py  api.py  errors.py
src/: models.py  settings.py
src/database/: __init__.py
src/database/createtables/: __main__.py
src/database/droptables/: __main__.py
src/parser/: __main__.py  api.py  cli.py  utils.py
