[tool.poetry]
name = "districkt-summer-practice-2024"
version = "0.1.0"
description = "Periodic parsing of the MTS Link API"
authors = ["Vitaly Zorin <addefan@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
