[tool.poetry]
name = "districkt-summer-practice-2024"
version = "0.1.0"
description = "Periodic parsing of the MTS Link API"
authors = ["Vitaly Zorin <addefan@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
